# HomeStay-MCP

./: .env.example  README.md  main.py  pyproject.toml
src/homestay/: __init__.py  database.py  models.py  server.py  tools.py
src/officer/: __init__.py  models.py  server.py  tools.py
